tests/specs/ecosystem/schematicos/mui_joy_forms/0_0_3.test
schematicos/mui-joy-forms/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@schematicos/generate@0.0.2": "jsr:@schematicos/generate@0.0.2",
      "jsr:@std/assert@^0.222.1": "jsr:@std/assert@0.222.1",
      "jsr:@std/path@0.222.1": "jsr:@std/path@0.222.1",
      "npm:@schematicos/types@0.0.34": "npm:@schematicos/types@0.0.34",
      "npm:tiny-invariant@1.3.3": "npm:tiny-invariant@1.3.3",
      "npm:ts-pattern@5.1.1": "npm:ts-pattern@5.1.1"
    },
    "jsr": {
      "@schematicos/generate@0.0.2": {
        "integrity": "f6fd054c8a2c0475b316722227d838e9d3d2b1bfda32aef2f11b5d2b448bcb8a",
        "dependencies": [
          "jsr:@std/path@0.222.1",
          "npm:@schematicos/types@0.0.34",
          "npm:tiny-invariant@1.3.3",
          "npm:ts-pattern@5.1.1"
        ]
      },
      "@std/assert@0.222.1": {
        "integrity": "691637161ee584a9919d1f9950ddd1272feb8e0a19e83aa5b7563cedaf73d74c"
      },
      "@std/path@0.222.1": {
        "integrity": "aad3e9463ca53b0adb25b4d5beb330025674aaa3278da24c1c261d9289a9e48b",
        "dependencies": [
          "jsr:@std/assert@^0.222.1"
        ]
      }
    },
    "npm": {
      "@schematicos/types@0.0.34": {
        "integrity": "sha512-KOb9sdaLoSsstN3/QdTALNCvXZ9NWNMxudMOyCRq7fzxCk555ERCCIG3LBUG7ovOXOn/56dkxIpCpvoj+2zQTQ==",
        "dependencies": {
          "zod": "zod@3.23.8"
        }
      },
      "tiny-invariant@1.3.3": {
        "integrity": "sha512-+FbBPE1o9QAYvviau/qC5SE3caw21q3xkvWKBtja5vgqOWIHHJ3ioaq1VPfn/Szqctz2bU/oYeKd9/z5BL+PVg==",
        "dependencies": {}
      },
      "ts-pattern@5.1.1": {
        "integrity": "sha512-i+owkHr5RYdQxj8olUgRrqpiWH9x27PuWVfXwDmJ/n/CoF/SAa7WW1i2oUpPDMQpJ4U+bGRUcZkVq7i1m3zFCg==",
        "dependencies": {}
      },
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /mod.ts:4:14
  | 
4 | export const transform = ({
  |              ^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


